--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ build
 .cproject
 .project
 .settings
-*~
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -13,3 +12,9 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+CPackConfig.cmake
+CPackSourceConfig.cmake
+DartConfiguration.tcl
+Version.h
+*~
+*.~
